Gonna test some more stuff tomorrow

--- a/index.html
+++ b/index.html
@@ -20,5 +20,6 @@
       <p class="game__result" id="result"></p>
     </div>
     <script src="app.js" charset="utf-8"></script>
+    <script src="script.js" charset="utf-8"></script>
   </body>
 </html>
