Refactored original code, new design idea structure implementation

--- a/index.html
+++ b/index.html
@@ -8,16 +8,11 @@
   </head>
   <body>
     <div class="game">
-      <h1 class="game__title">Pks Choose Your Own Adventure Game</h1>
-      <p class="game__story" id="story"></p>
-      <input
-        type="text"
-        class="game__input"
-        id="user-input"
-        placeholder="What do you do?"
-      />
-      <button class="game__button" id="submit-button">Submit</button>
-      <p class="game__result" id="result"></p>
+      <h1 class="game__title">Welcome, Adventurer!</h1>
+      <p class="game__story"></p>
+      <input type="text" class="game__input" placeholder="What do you do?" />
+      <button class="game__button">Submit</button>
+      <p class="game__result"></p>
     </div>
     <script src="app.js" charset="utf-8"></script>
     <script src="script.js" charset="utf-8"></script>
