Updated project to be multiple choice, implemented dynamically created buttons

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <div class="game">
       <h1 class="game__title">Welcome, Adventurer!</h1>
       <p class="game__story"></p>
-      <input type="text" class="game__input" placeholder="What do you do?" />
-      <button class="game__button">Submit</button>
+      <p class="game__result"></p>
+      <div class="game__choices"></div>
       <p class="game__result"></p>
     </div>
     <script src="app.js" charset="utf-8"></script>
